# strongswan

./: .gitignore  configure.ac
src/libcharon/: Makefile.am
src/libcharon/plugins/resolve/: resolve_handler.c
src/libcharon/plugins/subnet/: Makefile.am  subnet_handler.c  subnet_handler.h  subnet_narrow.c  subnet_narrow.h  subnet_plugin.c  subnet_plugin.h
src/libtls/: tls_peer.c
